# OpenFusionSim

./: .gitignore  CMakeLists.txt  README.md  fusionsim.ini
include/: ReactorState.h  SimTime.h
src/: main.cpp
src/Control/: CMakeLists.txt  Control.cpp  Control.h  ControlPhysics.cpp  ControlPhysics.h
src/ElectricalGrid/: CMakeLists.txt  ElectricalGrid.cpp  ElectricalGrid.h
src/Fuel/: CMakeLists.txt  Fuel.cpp  Fuel.h  TritiumCyclePhysics.cpp  TritiumCyclePhysics.h
src/Helium/: CMakeLists.txt  Helium.cpp  Helium.h  HeliumCoolingPhysics.cpp  HeliumCoolingPhysics.h
src/HeliumSystem/: CMakeLists.txt  HeliumCoolingSystem.cpp  HeliumCoolingSystem.h
src/Magnets/: CMakeLists.txt  MagnetPhysics.cpp  MagnetPhysics.h  Magnets.cpp  Magnets.h
src/MoltenSalt/: CMakeLists.txt  MoltenSaltSystem.cpp  MoltenSaltSystem.h
src/PlasmaCore/: CMakeLists.txt  PlasmaCoreBridge.cpp  PlasmaCoreBridge.h  boris_push.cu  charge_deposit.cu  collisions.cu  constants.cu  field_interpolation.cu  field_solve.cu  fusion_reactions.cu  neutron_transport.cu  plasmacore.cu  sorting.cu  types.cuh
src/SteamPower/: CMakeLists.txt  SteamCyclePhysics.cpp  SteamCyclePhysics.h  SteamPower.cpp  SteamPower.h
src/ThermalHydraulics/: CMakeLists.txt  MoltenSaltPhysics.cpp  MoltenSaltPhysics.h  ThermalHydraulics.cpp  ThermalHydraulics.h
src/TurbineSystem/: CMakeLists.txt  TurbineSystem.cpp  TurbineSystem.h  TurbineUnit.cpp  TurbineUnit.h
